test/pending/pos/t2625.scala
package t

object T {
  case class A(x: Int)(x: Int)

  def A(x: Boolean): Int = 34

  A(23)
}