test/pending/neg/t5353.scala
class A {
  def f(x: Boolean) = if (x) Array("abc") else Array()
}
